修改错误链接版

--- a/mall/views/default/layouts/site.html
+++ b/mall/views/default/layouts/site.html
@@ -42,7 +42,7 @@
 	</div>
 	<div class="navbar">
 		<ul>
-			<li><a href="http://yanan.rztaiyang.com">首页</a></li>
+			<li><a href="http://www.highyanan.com">首页</a></li>
 			{foreach:items=Api::run('getGuideList')}
 			<li><a href="{url:$item[link]}">{$item['name']}<span> </span></a></li>
 			{/foreach}
