--- a/mall/views/mobile/layouts/site.html
+++ b/mall/views/mobile/layouts/site.html
@@ -92,7 +92,7 @@
 	<div class="s_footer">
 	    <ul>
 	    <li>
-		<a id="kros_a" href="http://yanan.rztaiyang.com">
+		<a id="kros_a" href="http:www.highyanan.com">
 		<span class="fa-stack fa-lg kros_span" style="font-size:13px">
 		<i class="fa fa-circle fa-stack-2x kros_i" style="font-size:27px;color:#f7ab00"></i>
 		<i class="fa fa-home fa-stack-1x fa-inverse "></i>
